<resources>
    <string name="app_name">MoneyFlow</string>

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>0)
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="item_menu_expense_text_add">Add expense</string>
    <string name="message_add_new_expense_dialog">Add new expense</string>
    <string name="title_add_new_expense_dialog">Add expense</string>
    <string name="positive_button_add_new_expense_dialog">Add</string>
    <string name="negative_button_add_new_expense_dialog">Dismiss</string>
    <string name="critical">Critical</string>
    <string name="button_show_expenses_text">Show all Expenses</string>
    <string name="hint_name">Name</string>
    <string name="hint_volume">Volume</string>
    <string name="volume">Volume</string>
    <string name="name">Name</string>
    <string name="date">Date</string>
    <string name="item_menu_expense_text_reduce">Reduce expense</string>


    <string name="title_activity_profile">Profile</string>


    <string name="pref_category_account_info">Credentials</string>
    <string name="pref_key_account_info_settings">account_info</string>
    <string name="pref_key_login">login</string>
    <string name="pref_summary_login">Edit login</string>
    <string name="pref_title_login">Login</string>
    <string name="pref_key_person_info_settings">person_info</string>
    <string name="personal_data_preference_category">Personal data</string>
    <string name="pref_key_password">password</string>
    <string name="pref_summary_password_preference">Edit password</string>
    <string name="pref_title_password">Password</string>
    <string name="pref_key_email">email</string>
    <string name="pref_title_email">Email address</string>
    <string name="pref_title_name">First name</string>
    <string name="pref_key_ame">name</string>
    <string name="pref_key_last_name">last_name</string>
    <string name="pref_title_last_name">Last name</string>
    <string name="pref_key_sex">sex</string>
    <string name="pref_title_sex">Sex</string>
    <string name="item_menu_user_profile_tittle">Account info</string>
    <string name="title_tab_cash_flow">CashFlow</string>
    <string name="title_tab_expenses">Expenses</string>
    <string name="title_tab_incomes">Incomes</string>
    <string name="message_add_new_income_dialog">Add new income</string>
    <string name="title_add_new_income_dialog">Add income</string>
    <string name="positive_button_add_new_income_dialog">Add</string>
    <string name="negative_button_add_new_income_dialog">Dismiss</string>
    <string name="pref_summary_sex_on">Male</string>
    <string name="pref_summary_sex_off">Female</string>
    <string name="expenses_activity_name">Expenses</string>
    <string name="incomes_activity_name">Incomes</string>
</resources>
